# imbase

./: CMakeLists.txt  README.md  common_defs.cmake
.github/workflows/: ci.yml
src/: launcher.cpp  texture.cpp  window.cpp
src/base/: window.cpp
src/base/include/imbase/: window.hpp
src/include/imbase/: launcher.hpp  texture.hpp  window.hpp
